<resources>
    <string name="app_name">KotlinSeries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome.</string>
    <string name="user_email">Enter your email.</string>
    <string name="SignIn">Sign In</string>
    <string name="Become_a_member">Become a member? Click here.</string>
    <string name="kotlinseries">KotlinSeries</string>
    <string name="password">Password</string>
    <string name="myfile">My Files</string>
    <string name="business">Business</string>
    <string name="account">Account</string>
    <string name="trash">Trash</string>
    <string name="share">Share</string>
    <string name="email">Email</string>
    <string name="header_title">Gilbert Ayoma</string>
    <string name="header_text">nyabarayoma1@gmail.com</string>
    <string name="news">News</string>
    <string name="about_us">AgeCalculator</string>
    <string name="places">Places</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="register">Registration</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="delete">Delete</string>
    <string name="userlogo">UserLogo</string>
    <string name="age">Age</string>
    <string name="describedob">Please select your date of birth</string>
    <string name="calculate_age">Calculate Age</string>

    <!-- camera strings -->
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
</resources>