<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/filesFragment"
            android:icon="@drawable/baseline_folder_24"
            android:title="@string/myfile"
            android:checked="true" />
        <item
            android:id="@+id/businessFragment"
            android:icon="@drawable/baseline_business_24"
            android:title="@string/business" />
        <item
            android:id="@+id/accountFragment"
            android:icon="@drawable/baseline_supervisor_account_24"
            android:title="@string/account" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/communicate"
            android:title="Communication">
            <menu>
                <item
                    android:id="@+id/emailFragment"
                    android:icon="@drawable/baseline_email_24"
                    android:title="@string/email" />

                <item
                    android:id="@+id/shareFragment"
                    android:icon="@drawable/baseline_share_24"
                    android:title="@string/share" />

            </menu>
        </item>
    </group>

</menu>