<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AboutFragment">

    <data>

        <variable
            name="aboutFragment"
            type="com.example.kotlinseries.ui.AboutFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/describedob"
            android:textAlignment="center"
            style="@style/TextAppearance.Material3.BodyLarge" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/age"
            android:textAlignment="center"
            style="@style/TextAppearance.Material3.BodyLarge" />
        <Button
            android:id="@+id/ageCalculator"
            android:layout_width="match_parent"
            android:text="@string/calculate_age"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dob"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>