<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SignInFragment">

    <data>

        <variable
            name="loginInFragment"
            type="com.example.kotlinseries.ui.LoginFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- TODO: Update blank fragment layout -->
            <ImageView
                android:id="@+id/kotlinSeriesLogo"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                android:text="@string/hello_blank_fragment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textColor="@color/purple_200"
                android:text="@string/welcome"
                android:textSize="28sp"
                style="@style/Widget.KotlinSeries.Textview"
                app:layout_constraintTop_toBottomOf="@id/kotlinSeriesLogo"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/SignIn_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/SignIn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:onClick="@{()-> loginInFragment.goToNextScreen()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordText" />

            <TextView
                android:id="@+id/signUpAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Become_a_member"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/purple_200"
                android:onClick="@{()-> loginInFragment.goToRegistrationScreen()}"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/SignIn_button" />
            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
