<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registrationFragment"
            type="com.example.kotlinseries.ui.RegistrationFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".ui.SignUpFragment">

            <!-- TODO: Update blank fragment layout -->
            <ImageView
                android:id="@+id/userLogo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:text="@string/userlogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First name"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/middle_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Middle name"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/first_name_text"
                app:layout_constraintTop_toBottomOf="@id/first_name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/middle_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sir_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sir name"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/middle_name_text"
                app:layout_constraintTop_toBottomOf="@id/middle_name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sir_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="email"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/sir_name_text"
                app:layout_constraintTop_toBottomOf="@id/sir_name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="phone"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/emailText"
                app:layout_constraintTop_toBottomOf="@id/emailText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/phone_text"
                app:layout_constraintTop_toBottomOf="@id/phone_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/password_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:layout_marginEnd="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/delete"
                    android:visibility="gone" />

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>